package com.github.studeasy.gui.routers;

/**
 * Router for the services routes
 */
public class ServiceRouter extends AbstractRouter{
}
