@startuml
skinparam classAttributeIconSize 0

package GUI{
    abstract class AbstractRouter{
        + {static} load(String pathFXML) : Parent
        + changeView(String pathFXML, ActionEvent event)
        + adminRestricted(String pathFXML, ActionEvent event)
        + studentRestricted(String pathFXML, ActionEvent event)
        + partnerRestricted(String pathFXML, ActionEvent event)
    }
    class HomeAdminController{
            - bienvenueL : Label
            + managePendingServices(ActionEvent event)
            + seeAllServices(ActionEvent event)
            + logout(ActionEvent event)
            + initialize(URL location, RessourceBundle resources)
    }
    class HomeStudentController{
            - bienvenueL : Label
            + myServices(ActionEvent event)
            + seeAllServices(ActionEvent event)
            + proposeService(ActionEvent event)
            + requestService(ActionEvent event)
            + logout(ActionEvent event)
            + initialize(URL location, RessourceBundle resources)
    }
    class ProposeAskServiceController{
        - name : TextField
        - category : TextField
        - description : TextField
        - cost : TextField

        + submitProposeService(ActionEvent event)
        + submitAskService(ActionEvent event)
        + updateService(ActionEvent event)
        + cancel(ActionEvent event)
    }
    class HistoricController{
            - services : Service[]

            + getMyServicesBought(ActionEvent event)
            + cancel(ActionEvent event)
        }

    class myServicesController{
        - services : Service[]

        + viewService()
        + back(ActionEvent event)
    }

    class viewServiceController{
        - service : Service
        - validateService : Button
        - buyService : Button
        - applyForService : Button
        - updateService : Button
        - deleteService : Button
        - viewFeedbacks : Button
        
        
        + validateService(ActionEvent event)
        + viewFeedbacks(ActionEvent event)
        + updateService(ActionEvent event)
        + deleteService(ActionEvent event)
        + buyService(ActionEvent event)
        + applyForService(ActionEvent event)
        + back(ActionEvent event)
    }

    class allServicesController{
        - services : Service[]
        - keyword : TextField
        - category : DropBox
        - askedServices : CheckBox
        - proposedServices : CheckBox

        + seeAllServices(ActionEvent event)
        + seeProposedServices(ActionEvent event)
        + seeAskedServices(ActionEvent event)
        + viewService(ActionEvent event)
        + searchService(ActionEvent event)
        + back(ActionEvent event)
        + initialize(URL location, RessourceBundle resources)
        + back(ActionEvent event)
    }


    class ServiceRouter{
        + {static} VIEW_SERVICE_FXML_PATH : String = "views/service/view_service.fxml"
        + {static} PROPOSE_ASK_SERVICE_FXML_PATH : String = "views/service/propose_ask_service.fxml"
        + {static} MY_SERVICES_FXML_PATH : String = "views/service/propose_ask_service.fxml"
        + {static} ALL_SERVICES_FXML_PATH : String = "views/service/all_services.fxml"
        + {static} SERVICES_BOUGHT_FXML_PATH : String = "views/service/services_bought.fxml"
        + {static} getInstance() : ServiceRouter
        + login(ActionEvent event )
    }

    AbstractRouter <|-right- ServiceRouter


    AbstractRouter <-- HomeAdminController
    AbstractRouter <-- HomeStudentController
    AbstractRouter <-- allServicesController
    AbstractRouter <-- HistoricController
    AbstractRouter <-- viewServiceController
    AbstractRouter <-- myServicesController
    AbstractRouter <-- ProposeAskServiceController

    allServicesController <.. AbstractRouter : creates
    HistoricController <.. AbstractRouter : creates
    HomeAdminController <.. AbstractRouter : creates
    HomeStudentController <.. AbstractRouter : creates
    ProposeAskServiceController <.. AbstractRouter : creates
    myServicesController <.. AbstractRouter : creates
    viewServiceController <.. AbstractRouter : creates

}
package BusinessLogic{
    class FacadeService{
      
        + seeAllServices(int typeService) : Service[]
        + seePendingServices() : Service[]
        + searchService(String keyword, String category) : Service[]
        + getMyServicesBought() : Service[]
        + validateService()
        + updateService(String name,String category, String description, int cost)
        + submitProposeService(String name,String category, String description, int cost)
        + submitAskService(String name,String category, String description, int cost)
        + buyService(Service s)
        + updateService(String name,String category, String description, int cost, Service service)
        + applyForService()
        + deleteService()
        + {static} getInstance() : FacadeService
    }

    abstract class Factory{
        + {static} getInstance() : Factory
        + CreateServiceDAO() : ServiceDAO
    }
    class MySQLFactory{
        - db : Connection
        + CreateServiceDAO() : UserDAO
        - openConnection()
        - closeConnection()
    }

    Factory <|-left- MySQLFactory

    FacadeService <-up- allServicesController
    FacadeService <-up- HistoricController
    FacadeService <-up- viewServiceController
    FacadeService <-up- myServicesController
    FacadeService <-up- ProposeAskServiceController

}

package DAO{

    abstract class ServiceDAO{
        + {static} getInstance() : PartnerDAO
        + seePendingServices() : Service[]
        + seeProposedServices() : Service[]
        + seeAskedServices() : Service[]
        + searchService(String keyword, String category) : Service[]
        + updateService(String name,String category, String description, int cost, Service service)
        + validateService()
        + updateService(String name,String category, String description, int cost)
        + submitProposeService(String name,String category, String description, int cost)
        + submitAskService(String name,String category, String description, int cost)
        + deleteService()
    }

    class MySQLServiceDAO{
        - DB : Connection
        + seeAllServices() : Service[]
        + seeProposedServices() : Service[]
        + seeAskedServices() : Service[]
        + updateService(String name,String category, String description, int cost, Service service)
        + searchService(String keyword, String category) : Service[]
        + validateService()
        + updateService(String name,String category, String description, int cost)
        + submitProposeService(String name,String category, String description, int cost)
        + submitAskService(String name,String category, String description, int cost)
        + deleteService()
    }

    MySQLServiceDAO --|> ServiceDAO
    MySQLServiceDAO <.right. MySQLFactory : creates

    Factory <.. ServiceDAO : creates
    ServiceDAO <-right- FacadeService
}



@enduml